# nanonet

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README-networking.md  README.md  TODO.md
applications/: bilang.cpp  igctool.cpp
include/cpp-lib/: assert.h  bg-typedefs.h  cgi.h  container-util.h  database.h  dispatch.h  exception.h  http.h  math-util.h  memory.h  random.h  registry-crypt.h  registry.h  safe_queue.h  type_traits.h  units.h  util.h  xdr.h
include/cpp-lib/detail/: net-address.h  network.h  platform_net_impl.h  platform_wrappers.h  socket.h  socket_lowlevel.h
include/cpp-lib/posix/: net_impl.h  wrappers.h
include/cpp-lib/serialization/: gnss.h  ogn.h  spatial-index.h  version.h
include/cpp-lib/sys/: file.h  net-util.h  network.h  server.h  syslogger.h  util.h
include/cpp-lib/windows/: net_impl.h  realtime.h  wrappers.h
include/nanonet/: assert.h  container-util.h  database.h  dispatch.h  error.h  exception.h  http.h  math-util.h  random.h  registry.h  safe_queue.h  units.h  util.h  xdr.h
include/nanonet/detail/: net-address.h  network.h  platform_definition.h  platform_net_impl.h  platform_wrappers.h  socket.h  socket_lowlevel.h
include/nanonet/posix/: net_impl.h  wrappers.h
include/nanonet/posix1b/: realtime.h
include/nanonet/sys/: net-util.h  network.h  server.h  syslogger.h  util.h
include/nanonet/windows/: net_impl.h  realtime.h  wrappers.h
scripts/: build.sh  install-requirements-ubuntu.sh  run-all-tests.sh  run-annoying-tests.sh  run-fast-tests.sh  testenv.sh
src/: assert.cpp  audio.cpp  blowfish.cpp  cgi.cpp  command_line.cpp  database.cpp  dispatch.cpp  error.cpp  geodb.cpp  geometry.cpp  gnss.cpp  http.cpp  igc.cpp  interpolation.cpp  map.cpp  math-util.cpp  memory.cpp  network.cpp  nmea.cpp  ogn.cpp  random.cpp  registry.cpp  util.cpp  varlist.cpp
src/detail/: network.cpp  socket.cpp  socket_lowlevel.cpp
src/posix/: realtime.cpp  wrappers.cpp
src/sys/: file.cpp  logger.cpp  net-util.cpp  server.cpp  syslogger.cpp  util.cpp
src/tests/: dispatch-test.cpp  error-test.cpp  iowait.cpp  netutil.cpp  syslogger-test.cpp  tcp-test.cpp  udp-test.cpp  util-test.cpp
src/windows/: realtime.cpp  serial.cpp  wrappers.cpp  wrappers_special.cpp
testdata/golden-output/: 0.2.6.txt  airport-db.txt  error.txt  fileops.txt  interpolation.txt  map.txt  math.txt  ogn-1-thermals-2.txt  ogn-1.txt  ogn-unittests.txt  optimization.txt  quaternion.txt  rosenbrock-search-5.txt  syslogger.txt  table1.txt  triad.snd  util.txt
testdata/input/: 0.2.6.ogn  greifensee.kml  ogn-1.ogn  openaip_airports_switzerland_ch.aip  tcp.txt
testing/: .gitignore  check-git-diffs.sh  command_line-test.cpp  crypt_stream-test.cpp  dispatch-test.cpp  error-test.cpp  iowait.cpp  netutil.cpp  run-all-tests.sh  run-fast-tests.sh  sched-test.cpp  sched-thread-test.cpp  syslogger-test.cpp  tcp-test.cpp  test_key.h  tile-download.conf  udp-test.cpp  util-test.cpp
testing/data/golden-output/: airport-db-openaip.txt  dispatch.txt  geoid.txt  gnss-kml.txt  gnss.txt  json.txt  matrix-wrapper.txt  ogn-1-thermals.txt  ogn-2.txt  registry.txt  rosenbrock-search-4.txt  rosenbrock-search-5-instrumented.txt  spatial-index.txt  surface.out.hypercubic  surface.out.recursive  surface.out.simplicial  syslogger.txt  tcp.txt  tee1.txt  util.txt
testing/data/input/: airfield-queries.txt  airfields.csv  ogn-2.ogn  table1.txt  triad.melody  util.txt
testing/scripts/: run-all-tests.sh  run-fast-tests.sh
